--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>HEY THERE EVERYONE</h1>
+    <h2>What's cooking good looking?</h2>
+    <nav>
+        <a href="about">about</a>
+    </nav>
 </body>
 </html>
