--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HEY THERE EVERYONE</h1>
+    <h1>HEY THERE EVERYONE Merge</h1>
+    <h2></h2>
 </body>
 </html>
