--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HEY THERE EVERYONE Merge</h1>
-    <h2></h2>
+    <h1>HEY THERE EVERYONE MERGE</h1>
+    <h2>what happened to my code</h2>
 </body>
 </html>
