--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HEY THERE EVERYONE</h1>
+    <h1>Whats up doc</h1>
     <h2>What's cooking good looking?</h2>
     <nav>
         <a href="about">about</a>
+        <a href="test">test</a>
     </nav>
+    <footer>
+        <p>bla bla bla</p>
+    </footer>
 </body>
 </html>
